Fix main page view on mobile FHD+

--- a/src/app/less/style.less
+++ b/src/app/less/style.less
@@ -115,7 +115,7 @@ body.thin::-webkit-scrollbar {
   -webkit-perspective: 1000;
 }
 
-@media only screen and (min-device-width: 320px) and (max-device-width: 1240px) and (orientation: landscape) {
+@media only screen and (min-width: 320px) and (max-width: 1240px) and (orientation: landscape) {
   .maintitle:before {
     content: '';
     filter: blur(0px);
